apps/adguard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
  labels:
    app: adguard
