apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-svc-cip
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-svc-lb
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: dns
  type: LoadBalancer
