apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-https@kubernetescrd
  name: adguard-ingress
  namespace: adguard
spec:
  rules:
    - host: ENC[AES256_GCM,data:0kbY7E+flErKKmcn2z2a7yuwOuFRCeX8A/Hw,iv:MbNX54A3quki8rSTPx5pcqhnup4Kby7YOAzHYbkIHZE=,tag:iEm4eT0oj5k5GTd7lqDxOA==,type:str]
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: adguard-svc-cip
                port:
                  number: 3000
  tls:
    - hosts:
        - ENC[AES256_GCM,data:15LBl+BloosRzVRnSrjUJd/W2p1zMrI3jd/d,iv:xzLD03X2A+05VzFUFmalJ6UI1OTeGKi5lwvxzSgoh70=,tag:ZWn8ux4NbmYnEYaIWq+9QQ==,type:str]
      secretName: adguard-cert
sops:
  lastmodified: "2026-04-20T16:55:29Z"
  mac: ENC[AES256_GCM,data:qbWCYYwEMWSAVqO2jTiQJ490bkctSN4LfPAdQP0M4wqQ7hs7eWoBCIcc/msQvXqWkZ+zW0uI83N+hcS2xnaa98+mHmyvbnwMKKc8Y2x8WwpwQCwsGQZqvx8S65KVDgPS6SvrZ4/JyLn8+9t3GVqcJUgxpWUSVEveU1X4Xz/tgrA=,iv:027BiH0L4tatrBZwwB6hcIpDv/MB9wWcKKCWgK6T85g=,tag:WXusYJDZqHKk4zE0FMHOIQ==,type:str]
  pgp:
    - created_at: "2026-04-20T16:55:29Z"
      enc: |-
        -----BEGIN PGP MESSAGE-----

        hQIMA1R72LzcpgpmARAAkkduvwC0l953Q3fFtI8B4Wv26Qk3kXz+XHGCIXSv/iN/
[...]
        =+CeM
        -----END PGP MESSAGE-----
      fp: 08083A92DBB719D2E10998259B44720A645D6802
  encrypted_regex: ^(data|stringData|email|apiToken|host|hosts)$
  version: 3.12.2
